[metadata]
name = chatblade
version = 0.1.0
description = CLI Swiss Army Knife for ChatGPT
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license_file = LICENSE
url = https://github.com/npiv/chatblade
keywords = chatblade chatgpt cli python
project_urls =
    Documentation = https://github.com/npiv/chatblade

[options]
packages = chatblade
install_requires = 
  openai>=0.27.2
  tiktoken
  rich
  pyyaml
  platformdirs

[options.entry_points]
console_scripts =
  chatblade = chatblade.__main__:main



