[metadata]
name = chatblade
version = 0.3.5
description = CLI Swiss Army Knife for ChatGPT
long_description = file: README.md
long_description_content_type=text/markdown
license_file = LICENSE
url = https://github.com/npiv/chatblade
keywords = chatblade chatgpt cli python
project_urls =
    Documentation = https://github.com/npiv/chatblade

[options]
packages = chatblade
install_requires =
  openai~=1.9.0
  tiktoken~=0.5.1
  rich~=13.7.0
  PyYAML~=6.0.1
  platformdirs~=4.1.0

[options.entry_points]
console_scripts =
  chatblade = chatblade.__main__:main



